--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "description": "Tests to test and train technical knowledge",
   "private": true,
-  "scripts": {
-    "frontend:install": "npm install --prefix frontend",
-    "frontend:update": "npm update --prefix frontend"
-  },
+  "scripts": {},
   "author": "Berestov Aleksey <al_berestov@mail.ru>",
   "license": "ISC"
 }
